--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>springBoot-RabbitMq</module>
         <module>SpringBoot-MyBatis-Advances</module>
         <module>springBoot-Report</module>
+        <module>SpringBoot-Redis</module>
     </modules>
 
     <properties>
@@ -41,6 +42,13 @@
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-spring-boot-starter</artifactId>
             <version>3.0.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.3.9.RELEASE</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
