SpringBootReport   excel   suffix

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 /target/
 SpringBootCodeBase.iml
 /springBoot-RabbitMq/target/
+/springBoot-RabbitMq/springBoot-RabbitMq.iml
+/SpringBoot-MyBatis-Advances/SpringBoot-MyBatis-Advances.iml
+/springBoot-Report/springBoot-Report.iml
+/SpringBoot-Redis/SpringBoot-Redis.iml
+/springBoot-Report/target/
+/SpringBoot-Redis/target/
