--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ SpringBootCodeBase.iml
 /SpringBoot-Redis/SpringBoot-Redis.iml
 /springBoot-Report/target/
 /SpringBoot-Redis/target/
+/springBoot-zookeeper/springBoot-zookeeper.iml
