--- a/SpringBoot-Redis/src/main/resources/application.properties
+++ b/SpringBoot-Redis/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # Redis服务器连接端口
-spring.redis.port=8001
+spring.redis.port=6379
 # Redis服务器地址
-spring.redis.host=192.168.5.86
+spring.redis.host=127.0.0.1
 # Redis数据库索引（默认为0）
 spring.redis.database=5
 # Redis服务器连接密码（默认为空）
-spring.redis.password=12345678
+spring.redis.password= "" 
 # 连接池最大连接数（使用负值表示没有限制）
 spring.redis.jedis.pool.max-active=8
 # 连接池最大阻塞等待时间（使用负值表示没有限制）
@@ -21,4 +21,6 @@ spring.redis.timeout=5000ms
 spring.redis.sentinel.master=devwj
 # comma-separated list of host:port pairs  哨兵的配置列表
 spring.redis.sentinel.nodes=192.168.5.86:28001,192.168.5.86:28002,192.168.5.86:28003
+
+server.port=9093
 
