--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ SpringBootCodeBase.iml
 /springBoot-Report/target/
 /springBoot-RocketMq/target/
 /springBoot-zookeeper/target/
+/SpringBoot-Redission/target/
