--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,14 @@
         <module>springBoot-Report</module>
         <module>SpringBoot-Redis</module>
         <module>springBoot-zookeeper</module>
-        <module>springBoot-RocketMq</module>
         <module>SpringBoot-Redission</module>
         <module>SpringBoot-AOP</module>
         <module>springBoot-ShardingJDBC</module>
         <module>SpringBoot-LTS</module>
+        <module>springBoot-rocketMQ-consumer</module>
+        <module>Springboot-RocketMq-producer</module>
+        <module>SpringBoot-rocketMQ-producer</module>
+
     </modules>
 
     <properties>
@@ -61,6 +64,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <version>2.3.9.RELEASE</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot</artifactId>
+            <version>2.1.1</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
