feature SPI 机制打印shardingJDBC 慢SQL

--- a/springBoot-ShardingJDBC/src/main/resources/application.properties
+++ b/springBoot-ShardingJDBC/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.profiles.active=sharding-databases-tables
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.config-location=classpath:mybatis-config.xml
 # 打印sharding sql日志
-spring.shardingsphere.props.sql.show=true
+spring.shardingsphere.props.sql.show=false
 server.port=9099
 server.context-path=/springboot-demo        
 
