--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
         <module>Springboot-RocketMq-producer</module>
         <module>SpringBoot-rocketMQ-producer</module>
         <module>SpringBoot-mybatis-plus</module>
+        <module>SpringBoot-OSS</module>
+        <module>SpringBoot-Commons</module>
 
     </modules>
 
