SpringBoot oss sdk

--- a/SpringBoot-OSS/src/main/resources/application.properties
+++ b/SpringBoot-OSS/src/main/resources/application.properties
@@ -19,11 +19,13 @@ spring.rabbitmq.listener.simple.retry.enabled=true
 
 server.port=9010
 
-aliyun.accessKeyId=LTAI5tDQaeJXwT4LXDpEb7f7
-
-aliyun.secret=5HJaanLOvZR4qRjlzsZeZYFtA5eGq2
 
 rayOssKey=LTAI5tDT2HxdMRBVV8pE1MNv
 rayOssSecret=1whvEgrT0t7jo2vJxi0QgmJ0aWnzyH
 rayOssEndpoint=https://oss-cn-zhangjiakou.aliyuncs.com
 rayBucketName=fancv-sys
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=2048MB
+spring.servlet.multipart.maxRequestSize=2048MB
+
