SpringBoot 根据登录用户信息动态切换数据源

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>SpringBoot-mybatis-plus</module>
         <module>SpringBoot-OSS</module>
         <module>SpringBoot-Commons</module>
+        <module>SpringBoot-DynamicDataSource</module>
 
     </modules>
 
