--- a/SpringBoot-OSS/pom.xml
+++ b/SpringBoot-OSS/pom.xml
@@ -49,6 +49,14 @@
             <artifactId>jaxb-runtime</artifactId>
             <version>2.3.3</version>
         </dependency>
+
+        <!-- 图片缩略图 图片压缩 水印 start-->
+
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.8</version>
+        </dependency>
     </dependencies>
 
     <build>
