--- a/SpringBoot-OSS/src/main/resources/application.properties
+++ b/SpringBoot-OSS/src/main/resources/application.properties
@@ -21,18 +21,18 @@ server.port=9010
 
 
 rayOssKey=LTAI5t5sF7sXqD8by7p3RCRB
-rayOssSecret=mwTXDxnvGGO6V5YcMzp80q8a5oH67l
-rayOssEndpoint=https://oss-cn-zhangjiakou.aliyuncs.com
-rayBucketName=fancv-sys
+rayOssSecret=
+rayOssEndpoint=
+rayBucketName=
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=2048MB
 spring.servlet.multipart.maxRequestSize=2048MB
 
 
-dam.oss.accessKeyId=LTAI5t5sF7sXqD8by7p3RCRB
-dam.oss.accessKeySecret=mwTXDxnvGGO6V5YcMzp80q8a5oH67l
-dam.oss.bucketName=fancv-sys
+dam.oss.accessKeyId=
+dam.oss.accessKeySecret=
+dam.oss.bucketName=
 dam.oss.ossEndPoint=oss-cn-zhangjiakou.aliyuncs.com
 dam.oss.ossEndPointInner=oss-cn-zhangjiakou.aliyuncs.com
 
