--- a/SpringBoot-MyBatis-Advances/src/main/resources/application.yaml
+++ b/SpringBoot-MyBatis-Advances/src/main/resources/application.yaml
@@ -1,4 +1,12 @@
 spring:
+  cache:
+    redis:
+      key-prefix: sp
+    type: redis
+  redis:
+    port: 6379
+    host: 127.0.0.1
+    database: 10
   datasource:
     username: admin
     password: hta@123
@@ -34,4 +42,9 @@ server:
 mybatis:
     mapper-locations: classpath:mappers/*Mapper.xml
     type-aliases-package: com.fancv.dao
+
+logging:
+  level:
+    com.fancv.mapper: debug
+
 
