--- a/SpringBoot-OSS/src/main/resources/application.properties
+++ b/SpringBoot-OSS/src/main/resources/application.properties
@@ -1,35 +1,25 @@
 spring.application.name=spring-boot-oss
-
 spring.rabbitmq.host=127.0.0.1
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-
-
-# 发送者开启 confirm 确认机制
+# \u00B7\u00A2\u00CB\u00CD\u00D5\u00DF\u00BF\u00AA\u00C6\u00F4 confirm \u00C8\u00B7\u00C8\u00CF\u00BB\u00FA\u00D6\u00C6
 spring.rabbitmq.publisher-confirm-type=simple
-# 发送者开启 return 确认机制
+# \u00B7\u00A2\u00CB\u00CD\u00D5\u00DF\u00BF\u00AA\u00C6\u00F4 return \u00C8\u00B7\u00C8\u00CF\u00BB\u00FA\u00D6\u00C6
 spring.rabbitmq.publisher-returns=true
 ####################################################
-# 设置消费端手动 ack
+# \u00C9\u00E8\u00D6\u00C3\u00CF\u00FB\u00B7\u00D1\u00B6\u00CB\u00CA\u00D6\u00B6\u00AF ack
 spring.rabbitmq.listener.simple.acknowledge-mode=manual
-# 是否支持重试
+# \u00CA\u00C7\u00B7\u00F1\u00D6\u00A7\u00B3\u00D6\u00D6\u00D8\u00CA\u00D4
 spring.rabbitmq.listener.simple.retry.enabled=true
-
-
 server.port=9010
-
-
 rayOssKey=LTAI5t5sF7sXqD8by7p3RCRB
 rayOssSecret=
 rayOssEndpoint=
 rayBucketName=
-
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=2048MB
 spring.servlet.multipart.maxRequestSize=2048MB
-
-
 dam.oss.accessKeyId=
 dam.oss.accessKeySecret=
 dam.oss.bucketName=
