--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>SpringBoot-OSS</module>
         <module>SpringBoot-Commons</module>
         <module>SpringBoot-DynamicDataSource</module>
+        <module>SpringBoot-Security</module>
 
     </modules>
 
