--- a/SpringBoot-AOP/pom.xml
+++ b/SpringBoot-AOP/pom.xml
@@ -43,6 +43,14 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.41</version>
     </dependency>
+    <!--    参数校验    -->
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.1.2.Final</version>
+    </dependency>
+
+
 
   </dependencies>
 
